# eye_dota

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/: eye.Dockerfile  front.Dockerfile
eye_dota/: config.py  main.py
eye_dota/dependencies/: __init__.py  deps.py
eye_dota/routers/: __init__.py  main_router.py
eye_dota/schemas/: __init__.py  models.py
eye_dota/services/: __init__.py  aiohttp_service.py  misc.py  mongo_service.py  predict_service.py
frontend/: func.py  heroes.py  main.py
