[tool.poetry]
name = "eye-dota"
version = "0.1.0"
description = ""
authors = ["averagepythonfan <djonvorobei@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.6"
apache-airflow = "2.8.0"


[tool.poetry.group.scheduler.dependencies]
pymongo = "^4.6.3"
polars = "^0.20.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
