[tool.poetry]
name = "eye-dota"
version = "0.1.0"
description = ""
authors = ["averagepythonfan <djonvorobei@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.6"
apache-airflow = "2.8.0"
tqdm = "^4.66.2"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"
tslearn = "^0.6.3"


[tool.poetry.group.scheduler.dependencies]
pymongo = "^4.6.3"
polars = "^0.20.21"


[tool.poetry.group.base.dependencies]
fastapi = "^0.110.2"
uvicorn = "^0.29.0"


[tool.poetry.group.model.dependencies]
tensorflow = "2.15.0"


[tool.poetry.group.frontend.dependencies]
streamlit = "^1.34.0"
matplotlib = "^3.9.0"
scipy = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
